Made flip text responsive and fixed 100vh on mobile

--- a/app/assets/stylesheets/layouts/nav.scss
+++ b/app/assets/stylesheets/layouts/nav.scss
@@ -11,7 +11,6 @@
   width: 50%;
   margin: 0 auto;
   padding: 20px 0 20px 0;
-  position: relative;
 }
 
 #nav-dark-blur {
